--- a/FidelityBTG/MVVM/Views/ClientsPage.xaml
+++ b/FidelityBTG/MVVM/Views/ClientsPage.xaml
@@ -39,25 +39,24 @@
                         </Border.StrokeShape>
                         <Grid RowDefinitions="Auto" RowSpacing="4">
                             <Grid Grid.Row="1" RowDefinitions="Auto,Auto,Auto,Auto,Auto">
-                                <Label
-                                    Grid.Row="0"
-                                    FontAttributes="Bold"
-                                    FontSize="Medium"
-                                    Text="{Binding FullName}" />
-                                <Label
-                                    Grid.Row="1"
-                                    Margin="0,2"
-                                    FontSize="Small"
-                                    Text="{Binding Birthday, StringFormat='{0:dd/MM/yyyy}'}" />
+                                <Label Grid.Row="0" FontAttributes="Bold" FontSize="Medium" Text="{Binding FullName}" />
+
+                                <HorizontalStackLayout Grid.Row="1" Spacing="10" VerticalOptions="Center">
+                                    <Label Margin="0,2" FontSize="Small" Text="{Binding Birthday, StringFormat='{0:dd/MM/yyyy}'}" />
+                                    <Label FontSize="Micro" Text="{Binding Age, StringFormat='{0} anos'}" VerticalOptions="Center" TextColor="DarkGray"/>
+                                </HorizontalStackLayout>
+
                                 <Label
                                     Grid.Row="2"
                                     Margin="0,2"
                                     FontSize="Small"
                                     Text="{Binding Address}" />
+                                
                                 <HorizontalStackLayout Grid.Row="3">
                                     <Label Text="O usuário está ativo?" VerticalOptions="Center" FontSize="Micro"/>
                                     <CheckBox IsChecked="{Binding IsActive}" InputTransparent="True"/>
                                 </HorizontalStackLayout>
+                                
                                 <Grid
                                     Grid.Row="4"
                                     Margin="0,30,0,0"
