--- a/FidelityBTG/MVVM/Views/AddClientPage.xaml
+++ b/FidelityBTG/MVVM/Views/AddClientPage.xaml
@@ -9,11 +9,11 @@
         <Grid ColumnDefinitions="0.75*, 0.25*" ColumnSpacing="20">
             <VerticalStackLayout Grid.Column="0" Spacing="5">
                 <Grid ColumnDefinitions="*,*" HorizontalOptions="FillAndExpand">
-                    <Entry Grid.Column="0" Placeholder="Nome" Text="{Binding Name}" />
-                    <Entry Grid.Column="1" Placeholder="Sobrenome" Text="{Binding LastName}" />
+                    <Entry Grid.Column="0" x:Name="NameEntry" Placeholder="Nome" Text="{Binding Name}" />
+                    <Entry Grid.Column="1" x:Name="LastNameEntry" Placeholder="Sobrenome" Text="{Binding LastName}" />
                 </Grid>
 
-                <Entry Placeholder="Endereço" Text="{Binding Address}" />
+                <Entry x:Name="AddressEntry" Placeholder="Endereço" Text="{Binding Address}" />
             </VerticalStackLayout>
 
             <VerticalStackLayout Grid.Column="1" Spacing="5" HorizontalOptions="End">
