refactor: Update buttons

--- a/FidelityBTG/MVVM/Views/UpdateClientPage.xaml
+++ b/FidelityBTG/MVVM/Views/UpdateClientPage.xaml
@@ -30,10 +30,19 @@
             </VerticalStackLayout>
         </Grid>
 
-        <Button
-            Command="{Binding UpdateClientCommand}"
-            FontAttributes="Bold"
-            Text="Atualizar Cliente" />
-        
+        <VerticalStackLayout Spacing="10">
+            <Button
+                Command="{Binding UpdateClientCommand}"
+                FontAttributes="Bold"
+                Text="Atualizar Cliente"
+                BackgroundColor="Green"
+                TextColor="Black" 
+                MaximumWidthRequest="300"/>
+            <Button
+                Command="{Binding MoveBackToMenu}"
+                FontAttributes="Bold"
+                Text="Voltar"
+                MaximumWidthRequest="200"/>
+        </VerticalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
