--- a/FidelityBTG/MVVM/Views/AddClientPage.xaml
+++ b/FidelityBTG/MVVM/Views/AddClientPage.xaml
@@ -29,11 +29,19 @@
             </VerticalStackLayout>
         </Grid>
 
-        <Button
-            Command="{Binding AddClientCommand}"
-            FontAttributes="Bold"
-            Text="Criar Cliente"
-            TextColor="Black" />
-        
+        <VerticalStackLayout Spacing="10">
+            <Button
+                Command="{Binding AddClientCommand}"
+                FontAttributes="Bold"
+                Text="Criar Cliente"
+                BackgroundColor="Green"
+                TextColor="Black" 
+                MaximumWidthRequest="300"/>
+            <Button
+                Command="{Binding MoveBackToMenu}"
+                FontAttributes="Bold"
+                Text="Voltar"
+                MaximumWidthRequest="200"/>
+        </VerticalStackLayout>
     </VerticalStackLayout>
 </ContentPage>
